# CS-115

./: .gitignore
Assignments/CS-115-Assignment-0/: Main  Main.cpp  output  shortdictionary.txt
Assignments/CS-115-Assignment-1/: Main.cpp  README.md  TestWorld1A.cpp  TestWorld1B.cpp  TestWorld1C.cpp  World.cpp  World.h  blizzard_grid.txt  game  gamr  testcase1A.txt  testcase1B.txt  testcase1C.txt  testcase1E.txt
Assignments/CS-115-Assignment-2/: Item.cpp  Item.h  Main.cpp  TestHelper.cpp  TestHelper.h  TestItem2.cpp  World.cpp  World.h  blizzard_grid.txt  blizzard_text.txt  game  testcase2A.txt  testcase2B.txt  testcase2C.txt  testcase2D.txt  testcase2E.txt
Assignments/CS-115-Assignment-3/: CMakeLists.txt  Item.cpp  Item.h  Location.h  run  (+16 more)
Assignments/CS-115-Assignment-4/: CMakeLists.txt  Game.cpp  Game.h  Item.cpp  Item.h  ItemManager.cpp  ItemManager.h  Location.cpp  Location.h  Node.cpp  Node.h  TestHelper.cpp  TestHelper.h  TestLocation4.cpp  TestNode4.cpp  World.cpp  World.h  ghostwood_text.txt  main.cpp  test  testcase4A.txt  testcase4B.txt  testcase4C.txt  testcase4D.txt  testcase4E.txt  testy
Assignments/CS-115-Assignment-5/: CMakeLists.txt  Game.cpp  Game.h  ItemManager.cpp  ItemManager.h  Location.cpp  Location.h  ScoreTable.cpp  ScoreTable.h  TestElement5.cpp  TestHelper.cpp  TestHelper.h  TestItemManager5.cpp  TestScoreTable5.cpp  TestScoreTable5E.cpp  TestWorld4.cpp  World.cpp  main.cpp  test
Final-Review/: Array-of-pointers  Array-of-pointers.cpp  CMakeLists.txt  LinkedListCannonForm.cpp  LinkedListCannonForm.h  Pointers.cpp  Templated-SS-algorithms  Templated-SS-algorithms.cpp  Templated-SS-algorithms.h  main  main.cpp
(+59 files in other folders)
