cmake_minimum_required(VERSION 3.23)
project(CS_115_Assignment_4)

set(CMAKE_CXX_STANDARD 14)

add_executable(CS_115_Assignment_4 Location.cpp Node.cpp World.cpp Item.cpp ItemManager.cpp Game.cpp main.cpp)
#add_executable(CS_115_Assignment_4 Location.cpp Node.cpp World.cpp TestHelper.cpp TestWorld4.cpp)
